Development
    Updated French translation
    Added the ability to play a DVD from an ISO image
    Safety checks for musicbrains3
    Change cover art cache file when using 'guess' at what we are looking for
    Capture SIGTERM as well
    Shutdown mplayer when we get a SIGHUP (example is when X is forced to quit)
    Allow window decorations when running as a plugin but embedding is disabled
    Use the cache when streaming, a playlist or when forced, otherwise don't
    Cleanup media info display and usage of cache
    Disable the mplayer cache, unless media is streaming
    Hide media lable when running as plugin
    Fix bug in dbus open method
    Detect <smil> files are playlists, but don't parse them
    Fix drag and drop, so that when playlist is not visible items dropped on start playing
    Change return type of add_item_to_playlist
    When running in vertical mode and playing songs, keep pane from bouncing around
    Fix bug 149 at rpmfusion
    On fixed allocation, set it to be the new preferred size, fixed playlist popup resize issues
    Purge usage of GtkRequisition and use GtkAllocation
    Get the handle size from the style, rather than hardcoded
    Account for handle size when making playlist visible/hidden
    If artist + album does not find a match, just search on artist, inaccurate cover in some cases
    Fix a possible crash in cover art fetch
    Remove artist + track search as it didn't work right
    Cover art with highest score does not always have art, so pick the highest with art
    When fetching cover art try artist + album, if not found try artist + track title
    Fetch cover art based on score rather than first found
    Update volume on new media when ao is alsa and not using softvol
    When softvol is set, set volume to max
    Change 'Advanced Options' to 'Video Picture Adjustments', disable when no video
    Reword a couple of labels 
    Fix window resize issues when details is hidden/shown